dataset1235/2025-2/610742602/users/2485683856/executions/677928262_3455942218.log
== RUN (2025-08-28 16:25:09)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel + total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
1745.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
619.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
7093.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
1991941.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
124.6
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
605.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:24:10)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel + total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
1745.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
619.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
7093.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
1991941.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
124.6
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
605.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:25:41)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel + total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
1745.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
619.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
7093.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
1991941.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
124.6
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
605.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:26:27)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo?:" ))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?:" ))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel + total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
1745.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
619.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
7093.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
1991941.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
124.6
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
605.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:25:30)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel + total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
1745.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
619.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
7093.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
1991941.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
124.6
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
605.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:27:24)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo?:" ))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?:" ))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel + total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
1745.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
619.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
7093.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
1991941.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
124.6
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
605.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:24:33)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel + total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
1745.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
619.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
7093.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
1991941.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
124.6
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
605.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:26:17)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo?:" ))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?:" ))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel + total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
1745.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
619.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
7093.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
1991941.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
124.6
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
605.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:23:42)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
valor_disponivel = floatt(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8
saldo = valor_disponivel + custo_total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:23:53)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
valor_disponivel = floatt(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel + custo_total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_unitario = floatt(input("Qual o valor unitario do jogo? "))
                     ^^^^^^
NameError: name 'floatt' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:28:16)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo?: "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos?: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_unitario * 8 + 45
saldo = valor_disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
